--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Docker + SonarQube
+name: CI/CD Docker + SonarQube + Nexus
 
 on:
   push:
@@ -9,6 +9,8 @@ on:
 env:
   REGISTRY: docker.io
   IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/mon-image
+  NEXUS_REGISTRY: http://18.234.236.42:8081/repository/npm-hosted/
+  NEXUS_GROUP_REGISTRY: http://18.234.236.42:8081/repository/npm-group/
 
 jobs:
   build-test:
@@ -30,7 +32,6 @@ jobs:
       - name: Run tests
         run: npm test
 
-      # ⬇️ Analyse SonarQube
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v2
         with:
@@ -39,7 +40,6 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: http://18.234.236.42:9000
 
-      # 📦 (optionnel) Upload des artefacts
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -48,9 +48,36 @@ jobs:
             coverage/
             reports/
 
+  publish-nexus:
+    name: 📦 Publish to Nexus
+    needs: build-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Configure Nexus credentials
+        run: |
+          echo "//18.234.236.42:8081/repository/npm-hosted/:_auth=$(echo -n '${{ secrets.NEXUS_USER }}:${{ secrets.NEXUS_PASSWORD }}' | base64)" > .npmrc
+          echo "registry=${{ env.NEXUS_GROUP_REGISTRY }}" >> .npmrc
+          echo "always-auth=true" >> .npmrc
+
+      - name: Bump version and publish
+        run: |
+          npm version patch --no-git-tag-version
+          npm publish --registry ${{ env.NEXUS_REGISTRY }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NEXUS_TOKEN }}
+
   docker-build-push:
     name: 🐳 Docker Build & Push
-    needs: build-test
+    needs: [build-test, publish-nexus]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
